welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:4: error: not found: value nbtours
while (nbtours != 10) {
       ^